Interface: Fix menu button text align on chrome.

--- a/src/modules/ui/assets/style.less
+++ b/src/modules/ui/assets/style.less
@@ -80,7 +80,7 @@
         min-width: 70px;
         height: 24px;
         padding: 0 3px;
-        line-height: 21px;
+        line-height: 22px;
         margin-bottom: 8px;
     }
 }
